# irc2.1-ng

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  README  autogen.sh  c_sys.c  config.h.in  configure.ac  irc.c  irc.conf  ircd.conf  s_msg.c  struct.h  swear.c
client/: Makefile.am  Makefile.in  c_sys.c  edit.c  irc.c
etc/: ircd.conf
include/: struct.h
lib/: Makefile.am  Makefile.in
server/: Makefile.am  Makefile.in  date.c  ircd.c  server.c
services/: Makefile.am  diplomacy.c  diplomacy.c~
